@@ -1,3 +1,5 @@
+- Fixed problem with attachments in the \tmp\attachments\ folder that didn't get removed after sending an email from a mime source
+
 23-10-2014 6.0.32
 - Nexus sends no search folder. We default to inbox search now.
 - Sieve rules parser updated
